<resources>
    <string name="app_name">Labo2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string-array name="phone_types">
        <item>home</item>
        <item>work</item>
        <item>mobile</item>
    </string-array>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="main_btn_async">Async</string>
    <string name="main_btn_def">Deferred</string>
    <string name="main_btn_ser">Serialise</string>
    <string name="main_btn_zip">Zip</string>
    <string name="main_btn_graphql">GraphQL</string>
    <string name="async_send_title">Sending</string>
    <string name="async_btn_send">Send</string>
    <string name="async_receive_title">Receiving</string>
    <string name="serialized_logs_title">Logs</string>
    <string name="serialized_send_title">Sending</string>
    <string name="deferred_send_title">Sending</string>
    <string name="deferred_logs_title">Logs</string>
    <string name="deferred_btn_send">Send</string>
    <string name="serialized_btn_send">Send</string>
    <string name="serialized_btn_send_xml">XML</string>
    <string name="serialized_btn_send_json">JSON</string>
    <string name="serialized_btn_send_porotbuf">ProtoBuf</string>
    <string name="serialized_btn_send_protobuf">ProtoBuf</string>
</resources>