<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeferredActivity">

    <EditText
        android:id="@+id/deferred_send_text"
        android:layout_width="270dp"
        android:layout_height="148dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/deferred_btn_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deferred_send_title" />

    <TextView
        android:id="@+id/deferred_receive_title"
        android:layout_width="120dp"
        android:layout_height="41dp"
        android:layout_marginBottom="64dp"
        android:text="@string/deferred_logs_title"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/deferred_receive_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deferred_btn_send" />

    <EditText
        android:id="@+id/deferred_receive_text"
        android:layout_width="270dp"
        android:layout_height="148dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deferred_receive_title" />

    <TextView
        android:id="@+id/deferred_send_title"
        android:layout_width="120dp"
        android:layout_height="41dp"
        android:text="@string/deferred_send_title"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/deferred_send_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deferred_btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deferred_btn_send"
        app:layout_constraintBottom_toTopOf="@+id/deferred_receive_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deferred_send_text" />
</androidx.constraintlayout.widget.ConstraintLayout>