<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SerializedActivity">

    <TextView
        android:id="@+id/serialized_send_title"
        android:layout_width="120dp"
        android:layout_height="41dp"
        android:text="@string/serialized_send_title"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/serialized_form"/>

    <EditText
        android:id="@+id/serialized_receive_text"
        android:layout_width="270dp"
        android:layout_height="148dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serialized_receive_title" />

    <LinearLayout
        android:id="@+id/serialized_form"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:weightSum="2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/serialized_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serialized_receive_title">

        <LinearLayout
            android:id="@+id/serialized_form_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/serialized_form_right"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="20dp">

            <ListView
                android:id="@+id/serialized_form_persons_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </ListView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/serialized_form_right"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/serialized_form_left">

            <EditText
                android:id="@+id/serialized_form_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Name"
                android:inputType="textPersonName"
                />

            <EditText
                android:id="@+id/serialized_form_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Firstname"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/serialized_form_middlename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Middlename"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/serialized_form_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Phone number"
                android:inputType="phone" />

            <Spinner
                android:id="@+id/serialized_form_phone_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/phone_types" />

            <Button
                android:id="@+id/serialized_form_btn_add_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add person" />

            <Button
                android:id="@+id/serialized_form_btn_clear_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Clear list" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/serialized_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/serialized_form"
        app:layout_constraintBottom_toTopOf="@+id/serialized_receive_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/serialized_btn_send_xml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/serialized_btn_send_xml" />

        <Button
            android:id="@+id/serialized_btn_send_json"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/serialized_btn_send_json" />

        <Button
            android:id="@+id/serialized_btn_send_protobuf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serialized_btn_send_protobuf" />
    </LinearLayout>

    <TextView
        android:id="@+id/serialized_receive_title"
        android:layout_width="120dp"
        android:layout_height="41dp"
        android:layout_marginBottom="64dp"
        android:text="@string/serialized_logs_title"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/serialized_receive_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serialized_buttons" />
</androidx.constraintlayout.widget.ConstraintLayout>